# MenGrowth-Model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: phase-implementer.md  pre-flight-validator.md  results-analyst.md  test-runner.md
.claude/commands/: analyze-run.md  check-gate.md  implement-phase.md  pre-flight.md  run-tests.md
.claude/hooks/: compact-context.sh
.claude/rules/: coding-standards.md  critical-conventions.md  testing.md
.claude/skills/dl-scientist/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/test/: SKILL.md
docs/: CONFORMAL_PATH_ANALYSIS.md  PLAN_OF_ACTION_v1.md  REFACTORING_SUMMARY.md  RESEACH_PLAN.md  UQ_HETERO_CALIBRATION_ANSWER.md  UQ_SIGMA_V_VS_M_RESULTS.md  UQ_SYNTHETIC_VARIANCE_STRESSTEST.md  UQ_SYNTHETIC_VARIANCE_STRESSTEST_RESULTS.md  UQ_THESIS_GAP_ANALYSIS.md  exp1_prompt.txt  thesis_methodology_audit.md
docs/BrainSegFounder-Adaptation-related/: comprehensive-analysis-lora-ablation-results.md  methodology.md  new-comprehensive-analysis-lora-ablation.md
docs/Methods/: methodology_refined.md
docs/Methods/BrainSegFounder-Adaptation-related/: lore_and_sdc_phase.md
docs/Methods/claude_files_BSGNeuralODE/: DECISIONS.md  module_2_lora.md  module_5_neural_ode.md  module_6_evaluation.md  prposed_CLAUDE.md
docs/UQ_PRED/: EXPERIMENT.md  UQ_CANDIDATE_METRICS_MOTIVATION.md  UQ_SMOOTH_SHIFT_STRESSTEST.md
docs/deprecated/UQ_PRED/: UQ_CALIBRATION_STORY.md
docs/growth-related/: methodology_refined.md  phase4_pivot_to_gp_models.md
docs/stages/: stage_1_volumetric_baseline.md  stage_2_severity_model.md  stage_3_representation_learning.md  variance_decomposition.md
docs/technical_report/: .gitignore  main.tex  references.bib
docs/vae-related/: CHANGES_REPORT.md  SemiVAE_Model_Report.md  VAE_AUDIT_REPORT.md  semivae_analysis_and_recommendations.md
experiments/: __init__.py  domain_gap  lora  sdp  segment_based_approach
experiments/analysis/: analyze_brats_spatial.py
experiments/domain_gap/: __init__.py  generate_latex_table.py  plot_domain_gap.py  run_domain_gap.py
experiments/lora/: generate_report.py  run.py
experiments/lora_ablation/: README.md  __init__.py  analyze_results.py  cli.py  compute_domain_metrics.py  data_splits.py  diagnose_frozen_gli.py  domain_visualizations.py  enhanced_diagnostics.py  evaluate_dice.py  evaluate_probes.py  evaluate_probes_v2.py  extract_domain_features.py  extract_features.py  extract_features_v2.py  generate_report.py  generate_tables.py  model_factory.py  output_paths.py  post_hoc_analysis.py  regenerate_analysis.py  run_ablation.py  run_ablation_v2.py  run_all_experiments.sh  run_analysis.sh  run_no_semantic_heads_experiments.sh  statistical_analysis.py  train_condition.py  train_condition_v2.py  v3_cache.py  v3_figures.py  v3_style.py  visualizations.py  visualizations_v2.py
experiments/sdp/: evaluate_sdp.py  extract_all_features.py  train_sdp.py  visualize_latent.py
experiments/segment_based_approach/: __init__.py  config.yaml  regenerate_figures.py  run_baseline.py  segment.py
experiments/stage1_volumetric/: README_UQ.md  config.yaml  config_uq.yaml  doc.md  regenerate_figures.py  run_all.py  run_analysis.py  run_baseline.py  run_lme_hetero_zero.py  run_lme_implementation_audit.py  run_regenerate_conditional.py  run_single_model.py  run_stage1.py  run_stage1_uq.py  run_three_way_56.py  segment.py
experiments/stage2_severity/: config.yaml  run_severity.py
experiments/uncertainty_segmentation/: __init__.py  config.yaml  merge_predictions.py  run_evaluate.py  run_inference.py  run_train.py
experiments/utils/: __init__.py  experiment_output.py  settings.py
experiments/variance_decomposition/: config.yaml  run_decomposition.py
scripts/: convert_brats_gli_to_h5.py  convert_brats_men_to_h5.py  convert_mengrowth_to_h5.py  convert_nifti_to_h5.py  generate_swinvit_windows_figure.py  invert_predictions_to_original_space.py  run_benchmark.sh  sdp_diagnostics.py  train.py
slurm/: execute_experiment1.sh  execute_experiment2.sh  execute_experiment2_dip.sh  semivae_train.sh  vae_train.sh
slurm/domain_gap/: launch.sh  run_domain_gap.sh  run_plots.sh
slurm/lora/: launch.sh  launch_ddp.sh  launch_dual_domain.sh  launch_v3.sh  train_worker_ddp.sh  train_worker_dual_domain.sh
slurm/lora_adaptation/: analysis_worker_v3.sh  launch_rerun_v3.sh  launch_smoke_v4.sh  launch_v3.sh  rerun_worker_v3.sh  run_tests_gp_real.sh  smoke_test_v4.sh  train_worker.sh  train_worker_v3.sh
slurm/sdp/: encode_volumes.sh  launch.sh  run_sdp_pipeline.sh  setup.sh
slurm/segment_based_approach/: config.yaml  launch.sh  run_baseline.sh
slurm/vae/: dipvae_train.sh  vae_train.sh
src/: __init__.py
src/engine/: model_factory.py  plot_training_dashboard.py  train.py
src/growth/: __init__.py  exceptions.py
src/vae/: __init__.py
tests/: test_label_conversion.py  test_loss_functions_verification.py  test_loss_reduction_analysis.py  test_sbd.py  test_shapes.py  test_shapes_exp2.py  test_tcvae_loss.py  test_wandb_logging.py
tests/growth/: conftest.py  test_benchmark_analysis.py  test_bratsmendata.py  test_checkpoint.py  test_checkpoint_selection.py  test_conditional_calibration_r2.py  test_config.py  test_conformal.py  test_conformal_lopo.py  test_dci.py  test_delta_v.py  test_domain_divergence.py  test_dual_domain_analysis.py  test_encoder_vicreg.py  test_ensemble_convergence.py  test_ensemble_lme.py  test_epistemic_metrics.py  test_explainability_asi.py  test_explainability_brain_mask.py  test_explainability_dad.py  test_explainability_hooks.py  test_feature_extractor.py  test_gp_probes.py  test_gp_probes_real_data.py  test_growth_covariates.py  test_hgp_model.py  test_label_convention_downstream.py  test_latent_quality.py  test_lme_hetero.py  test_lme_model.py  test_lopo.py  test_lora_adapter.py  test_lora_checkpoint_loading.py  test_lora_per_stage.py  test_lr_scheduler.py  test_merge_predictions.py  test_metrics_crps.py  test_metrics_dss.py  test_model_factory.py  test_nlme_analytical.py  (+21 more)
(+685 files in other folders)
