[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mengrowth-model"
version = "0.1.0"
description = "MenGrowth-Model: A deep learning framework for meningioma growth prediction from multimodal magnetic resonance imaging"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = [
    "magnetic-resonance-imaging",
    "deep-learning",
    "tumour-growth-prediction",
    "meningioma"
]
authors = [
    {name = "Mario Pascual-González", email = "mpascual@uma.es"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.0.0",
    "monai>=1.3.0",
    "pytorch-lightning>=2.0.0",
    "omegaconf>=2.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "nibabel>=5.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "wandb>=0.16.0",
    "torchmetrics>=1.0.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/MarioPasc/MenGrowth-Model"
Documentation = "https://github.com/MarioPasc/MenGrowth-Model#readme"
Repository = "https://github.com/MarioPasc/MenGrowth-Model"
"Bug Tracker" = "https://github.com/MarioPasc/MenGrowth-Model/issues"
Changelog = "https://github.com/MarioPasc/MenGrowth-Model/releases"

[project.scripts]
vae-train = "vae.training.engine.train:main"
vae-analyze = "vae.tools.analysis.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vae*", "engine*"]

[tool.setuptools.package-data]
vae = ["py.typed", "config/*.yaml"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "yaml",
    "pandas",
    "SimpleITK.*",
    "matplotlib.*",
    "seaborn.*",
    "numpy.*",
    "nibabel.*",
    "nrrd.*",
]
ignore_missing_imports = true