[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mengrowth-model"
version = "0.1.0"
description = "MenGrowth-Model: A deep learning framework for meningioma growth prediction from multimodal magnetic resonance imaging"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = [
    "magnetic-resonance-imaging",
    "deep-learning",
    "tumour-growth-prediction",
    "meningioma",
    "gaussian-process",
    "foundation-model",
]
authors = [
    {name = "Mario Pascual-González", email = "mpascual@uma.es"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Core dependencies for growth pipeline and experiments
dependencies = [
    # Deep learning framework
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.0.0",

    # Medical imaging
    "monai>=1.3.0",
    "nibabel>=5.0.0",

    # Configuration and data
    "omegaconf>=2.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "PyYAML>=6.0.0",

    # Required for SwinUNETR
    "einops>=0.7.0",

    # LoRA adaptation
    "peft>=0.7.0",

    # Growth prediction (GP hierarchy)
    "GPy>=1.13.0",
    "statsmodels>=0.14.0",

    # Scientific computing
    "scipy>=1.10.0",

    # Visualization
    "matplotlib>=3.7.0",
    "umap-learn>=0.5.0",

    # Progress bars
    "tqdm>=4.65.0",

    # Logging
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
# VAE experiment dependencies (legacy module)
vae = [
    "wandb>=0.16.0",
    "scikit-image>=0.21.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies combined
all = [
    "mengrowth-model[vae,dev]",
]

[project.urls]
Homepage = "https://github.com/MarioPasc/MenGrowth-Model"
Documentation = "https://github.com/MarioPasc/MenGrowth-Model#readme"
Repository = "https://github.com/MarioPasc/MenGrowth-Model"
"Bug Tracker" = "https://github.com/MarioPasc/MenGrowth-Model/issues"
Changelog = "https://github.com/MarioPasc/MenGrowth-Model/releases"

[project.scripts]
# VAE module entry points (legacy)
vae-train = "vae.training.engine.train:main"
vae-analyze = "vae.tools.analysis.cli:main"

# Growth module entry points (future)
# growth-train-lora = "growth.training.train_lora:main"
# growth-train-sdp = "growth.training.train_sdp:main"
# growth-train-growth = "growth.training.train_growth:main"

# Experiment entry points
growth-exp-lora-ablation = "experiments.lora_ablation.run_ablation:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["vae*", "growth*", "experiments*"]

[tool.setuptools.package-data]
vae = ["py.typed", "config/*.yaml"]
growth = ["py.typed", "config/*.yaml"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "monai.*",
    "yaml",
    "pandas",
    "SimpleITK.*",
    "matplotlib.*",
    "seaborn.*",
    "numpy.*",
    "nibabel.*",
    "nrrd.*",
    "GPy.*",
    "statsmodels.*",
    "einops.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 100
target-version = ["py311"]
